[package]
name = "r2d2_mysql_rustls"
version = "26.0.0"
authors = ["fenrisu1fr <zitong.tian@outlook.com>"]
license = "MIT"
description = "MySQL support for the r2d2 connection pool without native-tls."
repository = "https://github.com/Jormungendr/r2d2-mysql"
keywords = ["mysql", "pool", "database", "r2d2", "rustls"]
edition = "2024"
rust-version = "1.85"

[dependencies]
r2d2 = "0.8.9"
mysql = {version = "26", features = ["rustls-tls-ring"]}
